--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -22,6 +22,9 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxtjs/eslint-config": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.5.0",
